--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,11 +1,34 @@
 @import "./config.scss";
 
 #footer-container {
-  padding: 12vh 0 8vh 0;
+  position: relative;
+  padding: 10vh 0 7vh 0;
   display: grid;
   background-color: $surface;
   place-items: center;
   gap: 3vh;
+
+  #back-to-top {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: grid;
+    place-items: center;
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    background: $primary-2-color;
+    color: $bg-dark;
+    font-size: 1.4rem;
+    text-decoration: none;
+    box-shadow: 0 14px 30px -12px rgba($primary-2-color, 0.7);
+    transition: var(--transition);
+    &:hover {
+      transform: translate(-50%, -50%) translateY(-4px);
+      background: #fff;
+    }
+  }
 
   #icons-container {
     display: flex;
