--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -65,7 +65,7 @@
     width: min(1150px, 92%);
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 300px), 1fr));
     gap: 2rem;
   }
 
